# bank_loans

./: .gitignore  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
bankloan_dbt_project/: dbt_project.yml
bankloan_dbt_project/models/example/: client_loan_analytics.sql  schema.yml
notebooks/: BankloanEDA.ipynb  csv_data_load_to_postgres.ipynb  example_data_load_with_sqlite.ipynb
powerbi/: bank_loan_report.pbix
profiles/: profile.yml
